tests/golden/err-shadowing/expected_error.txt
error: `title` はトップレベル（1行目）で束縛済みの名前です
 --> main.clum:4:3
  |
4 |   title = x
  |   ^^^^^ シャドーイングはできません。別の名前を使ってください
